# nest-graphql-proto-gen

./: Cargo.toml
proto/: article.proto
src/: main.rs
src/core/: format_typescript.rs  mod.rs  parse_protobuf.rs
template/: fmt_typescript.html
