[package]
name = "nest-graphql-proto-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
structopt = { version = "0.3.26", features = [] }
regex = "1.10.2"
